Avoid wrapping literals marked with class 'pre'.
Makes for nicer experience for things like compiler flags,
symbol names, etc., however this introduces the risk
of making very long literals unreadable on smaller screens
due to overflow.  Acceptable for now.

--- a/bootstraped/templates/main.css
+++ b/bootstraped/templates/main.css
@@ -48,3 +48,7 @@ h4 a {
 .figure img {
   max-width: 100%;
 }
+
+.pre {
+  white-space: pre;
+}
